2004-11-06 Bart Hakvoort  <gparted@users.sf.net>

	* instead of listing all partition in one list, logical partitions are now stored in a sublist in extended partition object.
	This makes partitionhandling in gparted more natural and transparant. It also allowed me to clean up this ugly Operation class ;)

2004-10-31 Bart Hakvoort  <gparted@users.sf.net>

	* include/Partition.h,
	  src/Partition.cc: removed color_string
	* src/VBox_VisualDisk.cc,
	  src/TreeView_Detail.cc: replaced color_string with Get_Color from Utils.h

2004-10-30 Bart Hakvoort  <gparted@users.sf.net>

	* configure.in: added checks for libuuid and libdl. Also refined libparted check a bit.
	* include/Partition.h,
	  src/Partition.cc: removed Get_Color()
	* include/Utils.h: added inline Glib::ustring Get_Color( const Glib::ustring & filesystem )
	* src/Dialog_Partition_New.cc,
	  src/Win_GParted.cc: make use of Get_Color from Utils.h
	* src/Device.cc: fixed a crasher with (at least) pl_PL locale.

2004-10-25 Vincent van Adrighem  <adrighem@gnome.org>

	* debian/*: Added a debian subdir. This dir contains buildscripts
	    for debian.

2004-10-22 Bart Hakvoort  <gparted@users.sf.net>

	* configure.in: bumped to version 0.0.6

2004-10-22 Bart Hakvoort  <gparted@users.sf.net>

	* configure.in: libpartedcheck now looks for correct version number (finally i'll be rid off those stupid bugreports =) )

2004-10-22 Bart Hakvoort  <gparted@users.sf.net>

	* src/Dialog_Partition_Info.cc: codecleanups.. Hey! i was bored :P

2004-10-22 Bart Hakvoort  <gparted@users.sf.net>

	* src/Device.cc: removed libparted messagesdialog. instead, show them on the console. They proved to be pretty useless.
	* src/Win_GParted.cc: fixed crasher when loading gparted (or refresh devices) while there's a (audio) cd in the cdrom-drive.

2004-10-21 Bart Hakvoort  <gparted@users.sf.net>

	* configure.in: modernized use of AM_INIT_AUTOMAKE a bit (according to 